--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,22 @@
 
+  
 <section class="bg-light p-4 " style="margin-top:130px">
     <div class="container m">
-        
+       <div class="row">
+                <div class="header ">
+                    <div class="cointainer float-left p-5 m-2 col-md-6 col-sm-3 ">
+                        <h1>Your Health is Our Top Priority</h1>
+                        <p class="mt-5">We’re dedicated to providing the best possible healthcare for the people <br>
+                            and helping you access the right services when you need them.</p>
+                    </div>
+
+
+                </div>
+
+
+
+            </div>
+     
         <div class="row ">
           {{#each doctors}}
             <div class="col-md-4">
