--- a/views/user/view-doctor.hbs
+++ b/views/user/view-doctor.hbs
@@ -1,6 +1,25 @@
+<section class="banner" id="about">
+    <div class="">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="header ">
+                    <div class="cointainer  p-5 m-2 col-md-6 col-sm-3 ">
+                        <h1>Your Health is Our Top Priority</h1>
+                        
+                    </div>
 
+
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
+</section>
 <section class="bg-light  " style="margin-top:110px">
     <div class="container mt-5">
+      
         
         <div class="row  ">
           {{#each doctors}}
