--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -18,7 +18,7 @@
 
 {{else}}
     <a class="dropdown-item" href="/login">USER LOGIN</a>
-    <a class="dropdown-item" href="#">DOCTOR LOGIN</a>
+    <a class="dropdown-item" href="doctor/doctor-login">DOCTOR LOGIN</a>
     <a class="dropdown-item" href="admin/admin-login">ADMIN LOGIN</a>
     
   </div>
