--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -6,6 +6,18 @@
                     <div class="row justify-content-center">
                         <h1>LOG IN</h1>
                     </div>
+
+
+                       {{#if messages}}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                   
+                    {{messages.error}} 
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                    </button>
+                  </div>
+
+       {{/if}}
                      <form action="/login" method="POST">
     
 
@@ -53,14 +65,7 @@
                         </div>
                     </div>
                                    
-     {{#if messages}}
-                    <div class="alert alert-danger alert-dismissible fade show p-2" role="alert">
-                        {{messages.error }}
-                        <button type="button" class="close p-2" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    {{/if}}
+    
                       <hr class="mx-5">
                      <div class="row mx-4 ">
                         
