--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -7,6 +7,20 @@
                     <div class="row justify-content-center">
                         <h1>Register</h1>
                     </div>
+ {{#if alert  }}
+ 
+          {{#each alert}}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                   
+                    {{this.msg}} 
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">×</span>
+                    </button>
+                  </div>
+
+       {{/each}}
+        {{/if}}
+                      
                      <form action="/register" method="POST">
     
 
