--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,55 +3,45 @@
 * {
   margin: 0;
   padding: 0;
-  border:0;
+  border: 0;
 }
 
 @media screen and (min-width: 1200px) {
-
   .card {
-      width: 800px;
-      margin: 0 auto;
+    width: 800px;
+    margin: 0 auto;
   }
 }
 
-
-
-
-
-
 .facebook2,
 .fa-facebook-f {
-  background-color: #38528D;
-color: white;
-border-radius: 5px;
+  background-color: #38528d;
+  color: white;
+  border-radius: 5px;
 }
 
 .facebook {
-  background-color: #3B5999;
+  background-color: #3b5999;
   color: white;
-
 }
 
 .google2,
 .fa-google-plus-g {
-background-color: #C74535;
-color: white;
-border-radius: 5px;
+  background-color: #c74535;
+  color: white;
+  border-radius: 5px;
 }
 
 .google {
-background-color: #D44837;
-color: white;
+  background-color: #d44837;
+  color: white;
 }
 
 .dropdown-toggle,
-.mayor
-{
+.mayor {
   background-color: #131313;
-  color: white; 
-  
+  color: white;
 }
-
 
 .fa-angle-right:hover {
   background-color: transparent;
@@ -72,11 +62,10 @@ color: white;
 .fa-key,
 .fa-envelope {
   background-color: white;
-
 }
 
 body {
-  background-color:white;
+  background-color: white;
 }
 
 .btn-text {
@@ -87,8 +76,9 @@ p {
   font-size: 1.5rem;
 }
 
-
-body {font-family: Arial;}
+body {
+  font-family: Arial;
+}
 
 /* Style the tab */
 .tab {
@@ -122,8 +112,7 @@ body {font-family: Arial;}
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 6px 12px;
+  padding: 6px 16px;
   border: 1px solid #ccc;
   border-top: none;
 }
-  
