--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -45,7 +45,7 @@
     <p>dilshanaibrahim@hmail.com</p>
    <div class="list-group">
   
-  <a href="/admin/admin-page" class="list-group-item list-group-item-action font-weight-bold">DASHBOARD</a>
+  <a href="/admin" class="list-group-item list-group-item-action font-weight-bold">DASHBOARD</a>
   <a href="/admin/view-admin" class="list-group-item list-group-item-action font-weight-bold">DOCUMENTS</a>
   
   <a href="/admin/list-appointments" class="list-group-item list-group-item-action font-weight-bold">APPOINTMENTS</a>
