--- a/views/admin/view-admin.hbs
+++ b/views/admin/view-admin.hbs
@@ -15,7 +15,7 @@
         
      
      
-  <table class="table mt-6">
+  <table class="table md-12">
   <thead> <a href="/admin/add-doctor" class="btn btn-info mr-auto btn-sm">Add Doctor</a>
     <tr>
       <th scope="col">Image</th>
@@ -23,8 +23,8 @@
       <th scope="col">Specialised</th>
       <th scope="col">Field</th>
       <th scope="col">Account status</th>
-    
-      <th>Actions</th>
+    <th  scope="col">Actions</th>
+      <th scope="col">Delete</th>
     </tr>
   </thead>
   <tbody>
@@ -74,6 +74,7 @@
       <th scope="col">Mobile number</th>
       <th scope="col">Account status</th>
     <th>Actions</th>
+    <th>Delete</th>
     </tr>
   </thead>
   <tbody>
